--- a/sass/_rwd.scss
+++ b/sass/_rwd.scss
@@ -22,55 +22,59 @@
         h1 {
             font-size: 2.4rem;
         }
-        
-        p {
-            margin: 0.3rem 0;  
+    }
+    header {
+        .menu__burger__btn {
+            display: block;
         }
-        header {
-            .menu__burger__btn {
-                display: block;
+        .menu {
+
+            &__logo {
+                height: 5vw;
             }
-            .menu {
-                
-                &__logo {
-                    height: 5vw;
+
+            &__nav {
+                display: none;
+            }
+        }
+
+        .content {
+            &__box {
+                text-align: center;
+
+                &__paragraph {
+                    font-size: .9rem;
                 }
-                
-                &__nav {
-                    display: none;
+
+                &__btn {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin: 4vh 0 0;
+
+                    .btn {
+                        margin: .5rem;
+                        max-width: 200px;
+                    }
+
+                    & a {
+                        padding: 0.6rem 1.2rem;
+                        width: 100%;
+                        font-size: 0.8rem;
+                        line-height: 20px;
+                    }
                 }
             }
 
-            .content {
-                &__box {
-                    text-align: center;
-                    
-                    &__paragraph {
-                        font-size: .9rem;
-                    }
-                    
-                    &__btn {
-                        display: flex;
-                        justify-content: center;
-                        margin: 4vh 0 0;
-                        
-                        .btn {
-                            margin: 1rem;
-                        }
-                        
-                        & a {
-                            font-size: 0.8rem;
-                            line-height: 40px;
-                            width: 100%;
-                        }
-                    }
-                }
-                
-                &__brand {
-                    display: none;
-                }
+            &__brand {
+                display: none;
             }
         }
+    }
+    
+    section#first__container {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 2fr);
     }
 }
 
@@ -80,55 +84,58 @@
         h1 {
             font-size: 2.4rem;
         }
-        
-        p {
-            margin: 0.3rem 0;  
+    }
+    
+    header {
+        .menu__burger__btn {
+            display: block;
         }
-        
-        header {
-            .menu__burger__btn {
-                display: block;
+        .menu {
+
+            &__logo {
+                height: 5vw;
             }
-            .menu {
-                
-                &__logo {
-                    height: 5vw;
+
+            &__nav {
+                display: none;
+            }
+        }
+
+        .content {
+            &__box {
+                text-align: center;
+
+                &__paragraph {
+                    font-size: .9rem;
                 }
-                
-                &__nav {
-                    display: none;
+
+                &__btn {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin: 4vh 0 0;
+                }
+
+                .btn {
+                    margin: .5rem;
+                }
+
+                & a {
+                    padding: 0.6rem 1.2rem;
+                    width: 100%;
+                    font-size: 0.8rem;
+                    line-height: 20px;
                 }
             }
 
-            .content {
-                &__box {
-                    text-align: center;
-                    
-                    &__paragraph {
-                        font-size: .9rem;
-                    }
-                    
-                    &__btn {
-                        display: flex;
-                        justify-content: center;
-                        margin: 4vh 0 0;
-                        
-                        .btn {
-                            margin: 1rem;
-                        }
-                        
-                        & a {
-                            font-size: 0.6rem;
-                            line-height: 40px;
-                            width: 100%;
-                        }
-                    }
-                }
-                
-                &__brand {
-                    display: none;
-                }
+            &__brand {
+                display: none;
             }
         }
+    }
+    
+    section#first__container {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 2fr);
     }
 }
