--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,8 @@ body p {
 }
 
 body button {
-  font-size: 1.0vw;
+  font-size: 1.0rem;
+  border: none;
 }
 
 body a {
@@ -250,12 +251,74 @@ section#first__container .first__container__text {
   text-align: center;
 }
 
+#second__container {
+  display: grid;
+  grid-gap: 4.9rem;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+#second__container .second__container__box {
+  min-height: 250px;
+  max-width: 400px;
+  margin: 0 auto;
+  -webkit-box-shadow: 0px 0px 51px 0px rgba(51, 51, 51, 0.1);
+  -moz-box-shadow: 0px 0px 51px 0px rgba(51, 51, 51, 0.1);
+  box-shadow: 0px 0px 51px 0px rgba(51, 51, 51, 0.1);
+  color: #4b479e;
+}
+
+#second__container .second__container__box__content {
+  padding: 2rem;
+}
+
+#second__container .second__container__box__content__image {
+  height: 130px;
+}
+
+#second__container .second__container__box__content__image img {
+  height: 100%;
+}
+
+#second__container .second__container__box__content h3 {
+  margin: 2rem 0;
+}
+
+#second__container .second__container__box__content p {
+  margin: 0;
+  line-height: 1.5rem;
+  font-weight: 600;
+  color: #4b479e;
+}
+
+#second__container .second__container__box button {
+  width: 100%;
+}
+
+#second__container .second__container__box button a {
+  display: block;
+  width: 100%;
+  line-height: 3rem;
+  background: #4b479e;
+  color: #fff;
+  border: 0;
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+
+#second__container .second__container__box button a img {
+  margin-left: .3rem;
+}
+
 @media screen and (min-width: 769px) and (max-width: 1279px) {
   body p {
     margin: 0.8rem 0;
   }
-  body header .content .content__box .content__box__btn {
+  header .content .content__box .content__box__btn {
     margin-top: 4vh;
+  }
+  section#second__container {
+    grid-template-rows: auto;
+    grid-template-columns: repeat(2, 2fr);
   }
 }
 
@@ -301,6 +364,10 @@ section#first__container .first__container__text {
     grid-template-rows: auto;
     grid-template-columns: repeat(1, 2fr);
   }
+  section#second__container {
+    grid-template-rows: auto;
+    grid-template-columns: repeat(1, 2fr);
+  }
 }
 
 @media screen and (max-width: 320px) {
@@ -341,6 +408,10 @@ section#first__container .first__container__text {
     display: none;
   }
   section#first__container {
+    grid-template-rows: auto;
+    grid-template-columns: repeat(1, 2fr);
+  }
+  section#second__container {
     grid-template-rows: auto;
     grid-template-columns: repeat(1, 2fr);
   }
