--- a/sass/_rwd.scss
+++ b/sass/_rwd.scss
@@ -9,10 +9,14 @@
         p {
             margin: 0.8rem 0;
         }
+    }
+    header .content .content__box .content__box__btn {
+        margin-top: 4vh;
+    }
     
-        header .content .content__box .content__box__btn {
-            margin-top: 4vh;
-        }
+    section#second__container {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(2, 2fr);
     }
 }
 
@@ -27,6 +31,7 @@
         .menu__burger__btn {
             display: block;
         }
+        
         .menu {
 
             &__logo {
@@ -76,6 +81,11 @@
         grid-template-rows: auto;
         grid-template-columns: repeat(1, 2fr);
     }
+    
+    section#second__container {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 2fr);
+    }
 }
 
 // Smarthphones
@@ -90,6 +100,7 @@
         .menu__burger__btn {
             display: block;
         }
+        
         .menu {
 
             &__logo {
@@ -135,6 +146,11 @@
     }
     
     section#first__container {
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 2fr);
+    }
+    
+    section#second__container {
         grid-template-rows: auto;
         grid-template-columns: repeat(1, 2fr);
     }
