--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,8 @@ body {
     }
     
     button {
-        font-size: 1.0vw;
+        font-size: 1.0rem;
+        border: none;
     }
     
     a {
@@ -139,7 +140,6 @@ header {
                     color: $first-color;
                     cursor: pointer;
                     @include easeOut;
-                    
                 }
             }
         }
@@ -181,6 +181,65 @@ section {
             text-align: center;            
         }
     }   
+}
+
+// SECOND SECTION - Offer ---------------------------------------------
+#second__container{
+    display: grid;
+    grid-gap: 4.9rem;
+    grid-template-columns: repeat(4, 1fr);
+    
+    .second__container__box {
+        min-height: 250px;
+        max-width: 400px;
+        margin: 0 auto;
+        -webkit-box-shadow: 0px 0px 51px 0px rgba(51,51,51,0.1);
+        -moz-box-shadow: 0px 0px 51px 0px rgba(51,51,51,0.1);
+        box-shadow: 0px 0px 51px 0px rgba(51,51,51,0.1);
+        color: $third-color;
+        
+        &__content {
+            padding: 2rem;
+            
+            &__image {
+                height: 130px;
+
+                img {
+                    height: 100%;
+                }
+            }
+
+            h3 {
+                margin: 2rem 0;
+            }
+            
+            p {
+                margin: 0;
+                line-height: 1.5rem;
+                font-weight: 600;
+                color: $third-color;
+            }
+        }
+        
+        button {
+            width: 100%;
+            
+            a {
+                display: block;
+                width: 100%;
+                line-height: 3rem;   
+                background: $third-color;
+                color: $first-color;
+                border: 0;
+                cursor: pointer;
+                @include easeOut;
+                
+                img {
+                    margin-left: .3rem;
+                }
+            }
+        }
+    }
 }
 
 @import 'rwd';
